k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fs-demoapp
  labels:
    app.kubernetes.io/name: fs-demoapp
